--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,12 @@ message(${proj_src})
 
 
 add_executable(${PROJECT_NAME} ${proj_src})
+# matplotlibcppで使うPythonとNumpyを探す
+find_package(Python3 COMPONENTS Development NumPy)
+target_include_directories(${PROJECT_NAME} PRIVATE ${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PRIVATE Python3::Python Python3::NumPy)
 target_link_libraries(${PROJECT_NAME} PRIVATE dpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE jsoncpp)
+
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
