--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,10 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "source_location": "cpp"
+        "source_location": "cpp",
+        "bitset": "cpp",
+        "complex": "cpp",
+        "set": "cpp",
+        "typeindex": "cpp"
     }
 }
